refactor(chat): 优化聊天记录处理和表单渲染
- 将 directlyReturnChunkList.get(0) 替换为 getFirst() 方法调用
- 添加正则表达式用于匹配和清理表单渲染标签
- 在历史消息处理中过滤掉表单渲染标签内容
- 新增 getChatRecords 方法支持对话记录检索
- 添加 FORM_RENDER_PATTERN 静态常量用于表单渲染标签处理